--- a/bootstrap/css/bai_tap_2.html
+++ b/bootstrap/css/bai_tap_2.html
@@ -188,6 +188,121 @@
         </button>
     </div>
 </div>
+
+<div class="row mx-5 mb-5" style="margin: auto">
+    <div class="col-md-4">
+        <p class="fw-lighter fs-2">More choices than ever</p>
+        <p class="fw-light fs-6">Check out the most diverse selection of Surface devices yet, built for all the ways you
+            create, work, play, and connect.</p>
+    </div>
+
+    <div class="col-md-8 row mb-5">
+        <div class="col-md-4 mb-3"><img src="https://c.s-microsoft.com/en-us/CMSImages/Surface_Home_DeviceShowcase_F22JB_Color_V1.png?version=9b651b37-60b1-ec15-4e0a-9fcc0ce69762"/>
+            <span class="content-mid">For Education  ></span></div>
+        <div class="col-md-4 mb-3"><img src="https://c.s-microsoft.com/en-us/CMSImages/Surface_F22_Home_LinkNav_Compare.jpg?version=3bd1d210-023a-194e-de3b-43199e0c1c8c"/>
+            <span class="content-mid">Compare devices  ></span></div>
+        <div class="col-md-4 mb-3"><img src="https://c.s-microsoft.com/en-us/CMSImages/Surface_F22_Home_LinkNav_HelpMeChoose.jpg?version=8891907f-ff90-1a04-2df1-250a2b11a9d4"/>
+            <span class="content-mid">Help me choose  ></span></div>
+        <div class="col-md-4 mb-3"><img src="https://c.s-microsoft.com/en-us/CMSImages/Surface_F22_Home_LinkNav_Deals.jpg?version=0b6d21dd-e2a6-f1e8-cc7f-34a141514d19"/>
+            <span class="content-mid">Deals  ></span></div>
+        <div class="col-md-4 mb-3"><img src="https://c.s-microsoft.com/en-us/CMSImages/Surface_F22_Home_LinkNav_WhySurface.png?version=026c6a01-80af-1f08-dad1-6de486da3e2e"/>
+            <span class="content-mid">Surface at home  ></span></div>
+        <div class="col-md-4 mb-3"><img src="https://c.s-microsoft.com/en-us/CMSImages/Surface_F22_Home_LinkNav_Education.jpg?version=1b0c8927-642f-f117-bb6c-ae8afe6469d3"/>
+            <span class="content-mid">For Business  ></span></div>
+    </div>
+
+</div>
+
+<div class="row" style="margin: auto">
+    <div class="card col-md-3" style="background-color: #FFF">
+        <img class="card-img-top mb-5" src="https://c.s-microsoft.com/en-us/CMSImages/Surface_Home_DeviceShowcase_F22GP13.5_Color_V1.png?version=8e5a2556-24db-d3e8-7118-3abe23bc17ef"/>
+        <div class="card-body">
+            <span class="content-mid card-text">Surface Pro 8  ></span>
+        </div>
+    </div>
+
+    <div class="card col-md-3" style="background-color: #FFF">
+        <img class="card-img-top mb-5" src="https://c.s-microsoft.com/en-us/CMSImages/Surface_Home_DeviceShowcase_F22GP15_Platinum_V1.png?version=6005b379-03e4-b402-8d4c-94afa722922f"/>
+        <div class="card-body">
+            <span class="content-mid card-text">Surface Pro X  ></span>
+        </div>
+    </div>g
+
+    <div class="card col-md-3" style="background-color: #FFF">
+        <img class="card-img-top mb-5" src="https://c.s-microsoft.com/en-us/CMSImages/Surface_F22_Home_DeviceShowcase_LaptopStudio_V1.png?version=ad369ede-9488-fb1c-cd5d-6d2b0f46fc34"/>
+        <div class="card-body">
+            <span class="content-mid card-text">Surface Pro 7+  ></span>
+        </div>
+    </div>
+
+    <div class="card col-md-3" style="background-color: #FFF">
+        <img class="card-img-top mb-5" src="https://c.s-microsoft.com/en-us/CMSImages/Surface_F22_Home_DeviceShowcase_DCN_V1.png?version=ad89c5dd-67ab-aab2-265e-da11e469c1cd"/>
+        <div class="card-body">
+            <span class="content-mid card-text">Surface Go 3  ></span>
+        </div>
+    </div>
+</div>
+
+<p class="mt-5 mb-3" class="underline" style="color: #101010; font-size: 20px;font-weight: bold" >Laptops</p>
+<div class="row" style="margin: auto">
+    <div class="card col-md-3" style="background-color: #FFF">
+        <img class="card-img-top mb-5" src="https://tse3.mm.bing.net/th?id=OIP.MtSoyY0XjYxxnpp2uNLMAQHaD-&pid=Api&P=0 "/>
+        <div class="card-body">
+            <span class="content-mid card-text">Surface Laptop Studio  ></span>
+        </div>
+    </div>
+
+    <div class="card col-md-3" style="background-color: #FFF">
+        <img class="card-img-top mb-5" src="https://c.s-microsoft.com/en-us/CMSImages/Surface_F22_Home_DeviceShowcase_Duo2_V1.png?version=63b5ab4c-0b69-46b2-3309-9e63790b6369"/>
+        <div class="card-body">
+            <span class="content-mid card-text">Surface Laptop4  ></span>
+        </div>
+    </div>
+
+    <div class="card col-md-3" style="background-color: #FFF">
+        <img class="card-img-top mb-5" src="https://c.s-microsoft.com/en-us/CMSImages/Surface_Home_DeviceShowcase_F22PM_V1.png?version=781aac24-eebb-2393-0f4a-337960514d4e">
+        <div class="card-body">
+            <span class="content-mid card-text">Surface Laptop Go  ></span>
+        </div>
+    </div>
+
+    <div class="card col-md-3" style="background-color: #FFF">
+        <img class="card-img-top mb-5" src="https://tse3.mm.bing.net/th?id=OIP.Vs6iAgse5ztaT-VgrltqxwHaGx&pid=Api&P=0"/>
+        <div class="card-body">
+            <span class="content-mid card-text">Surface Duo 2  ></span>
+        </div>
+    </div>
+</div>
+
+<p class="mt-5 mb-3" style="color: #101010; font-size: 20px;font-weight: bold">All-in-One</p>
+<div class="row" style="margin: auto">
+    <div class="card col-md-3" style="background-color: #FFF">
+        <img class="card-img-top mb-5" src="https://tse2.mm.bing.net/th?id=OIP.1z5Ge9ZKcu_tyXIFOs-AGwHaEF&pid=Api&P=0"/>
+        <div class="card-body">
+            <span class="content-mid card-text">Surface Studio 2  ></span>
+        </div>
+    </div>
+
+    <div class="card col-md-9 d-flex justify-content-center align-items-center">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="https://tse4.mm.bing.net/th?id=OIP.q9WXdkuOdGY-GkFY3x1ACgHaE8&pid=Api&P=0" class="img-fluid rounded-start">
+            </div>
+            <div class="col-md-6 d-flex justify-content-center align-items-center">
+                <div class="card-body row">
+                    <p class="card-text">Trying to decide which Surface device to choose?</p>
+                    <p class="content-mid card-text">Compare Surface devices ></p>
+                    <p class="content-mid card-text">Help me choose ></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<p>
+    <span class="me-3" style="color: #101010; font-size: 20px;font-weight: bold">Lap top ></span>
+    <span class="content-mid" style="color: #101010; font-size: 20px;font-weight: bold">Explore all surface laptops ></span>
+</p>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
