--- a/bootstrap/css/microsoftwed.html
+++ b/bootstrap/css/microsoftwed.html
@@ -103,7 +103,7 @@
         <div class="card-body">
             <span class="content-mid card-text">Surface Pro X  ></span>
         </div>
-    </div>
+    </div>g
 
     <div class="card col-md-3" style="background-color: #FFF">
         <img class="card-img-top mb-5" src="https://c.s-microsoft.com/en-us/CMSImages/Surface_F22_Home_DeviceShowcase_LaptopStudio_V1.png?version=ad369ede-9488-fb1c-cd5d-6d2b0f46fc34"/>
